attempting to fix height issue on iphones for hero section

--- a/components/Hero/hero.css
+++ b/components/Hero/hero.css
@@ -258,7 +258,7 @@ box-sizing: border-box;
   }
 
   .hero-header {
-    flex: none;
+    flex: 1;
     width: 100%;
   }
 
